crates/otter-vm/tests/compile_fail/root_trace_table_import_rejected.rs
fn main() {
    let _table: Option<otter_gc::TraceTable> = None;
}
